# joule-heating-automation

./: .editorconfig  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTORS.md  FORMATTING.md  LICENSE  README.md  SETUP.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
experiments/: run_cc_experiment.py  run_pid_experiment.py
scripts/: colour_map.py  console_utils.py  device_utils.py  djs_cc.py  djs_pid.py  file_name.py  gradient_analysis.py  gui.py  joule_heating_constant_current.py  joule_heating_pid.py  plot.py  port_detect.py  power_supply_etm.py  print_summary.py  rasx_to_xy.py  save_data.py  signal_utils.py  system_sleep.py  temp_sensor_optris.py  temp_sensor_utils.py  temp_sensor_ycr.py  xy_plotter.py
scripts/gui/: gui_cc.py  gui_pid.py
src/joule_heating/: __init__.py
src/joule_heating/analysis/: __init__.py  gradient_analysis.py
src/joule_heating/data/: __init__.py  file_name.py  print_summary.py  save_data.py
src/joule_heating/devices/: __init__.py  device_registry.py  device_utils.py  exceptions.py  port_detect.py  power_supply_etm.py  temp_sensor_optris.py  temp_sensor_utils.py  temp_sensor_ycr.py
src/joule_heating/experiments/: __init__.py  cc.py  pid.py
src/joule_heating/gui/: __init__.py  common.py  gui_cc.py  gui_pid.py
src/joule_heating/plotting/: __init__.py  plot.py
src/joule_heating/utils/: __init__.py  audio_alerts.py  console_utils.py  skip_step.py  system_sleep.py
tests/: test_data.py  test_gradient_analysis.py  test_namedtuples.py  test_skip_step.py
