[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "joule-heating-automation"
version = "1.0.0"
description = "Python-based experimental control system for sintering materials through resistive heating"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Delwin Tanto"}
]
dependencies = [
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pyserial>=3.5",
    "minimalmodbus>=2.1.0",
    "simple-pid>=2.0.0",
    "tkinter-tooltip>=3.1.0",
    "pywin32>=306; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
joule-cc = "joule_heating.experiments.cc:main"
joule-pid = "joule_heating.experiments.pid:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
joule_heating = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["build", "dist"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # Line too long (handled by Black)
    "B008",  # Do not perform function call in argument defaults
    "C901",  # Function is too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__ files

[tool.ruff.lint.isort]
known-first-party = ["joule_heating"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

